--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,10 +5,12 @@ Version: 0.0.1
 Encoding: UTF-8
 URL: https://github.com/JessicaMPreston/AdvancedR3
 BugReports: https://github.com/JessicaMPreston/AdvancedR3/issues
-
 Imports: 
     dplyr,
+    fs,
     here,
+    readr,
     readxl,
+    snakecase,
     stringr,
     tidyr
