--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,8 +8,10 @@ BugReports: https://github.com/JessicaMPreston/AdvancedR3/issues
 Imports: 
     dplyr,
     fs,
+    ggplot2,
     glue,
     here,
+    knitr,
     quarto,
     readr,
     readxl,
