--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,7 @@ Encoding: UTF-8
 URL: https://github.com/JessicaMPreston/AdvancedR3
 BugReports: https://github.com/JessicaMPreston/AdvancedR3/issues
 Imports: 
+    broom,
     dplyr,
     fs,
     ggplot2,
